--- a/f_lesson_11/index.html
+++ b/f_lesson_11/index.html
@@ -38,8 +38,8 @@
               <li class="header__item"><a href="#" class="header__link">About</a></li>
             </ul>
             <div class="header__menu-icons">
-              <img src="img/header/search.svg" alt="search icon" class="header__search">
-              <img src="img/header/cart.svg" alt="cart icon" class="header__cart"><span class="header__quantity">2</span>
+              <a href="#" class="header__search"><img src="img/header/search.svg" alt="search icon"></a>
+              <a href="#" class="header__cart"><img src="img/header/cart.svg" alt="cart icon"><span class="header__quantity">2</span></a>
             </div>
           </nav>
         </div>
